--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -13,13 +13,16 @@
         <th>Year</th>
         <th>Price</th>
       </tr>
-      <tr th:each=" book : ${books}">
+      <tr th:each="book : ${books}">
         <td th:text="${book.author}"></td>
         <td th:text="${book.title}"></td>
         <td th:text="${book.isbn}"></td>
         <td th:text="${book.publicationYear}"></td>
         <td th:text="${book.price} + ' €'"></td>
+        <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+        <td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
       </tr>
     </table>
+    <a href="/addbook">Add Book</a>
   </body>
 </html>
