--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -3,6 +3,12 @@
   <head>
     <title>AaposBookStore</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="/css/bootstrap.min.css"
+      th:href="@{/css/bootstrap.min.css}"
+    />
   </head>
   <body>
     <table class="table table-striped">
@@ -19,10 +25,18 @@
         <td th:text="${book.isbn}"></td>
         <td th:text="${book.publicationYear}"></td>
         <td th:text="${book.price} + ' €'"></td>
-        <td><a th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
-        <td><a th:href="@{/edit/{id}(id=${book.id})}">Edit</a></td>
+        <td>
+          <a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}"
+            >Delete</a
+          >
+        </td>
+        <td>
+          <a class="btn btn-warning" th:href="@{/edit/{id}(id=${book.id})}"
+            >Edit</a
+          >
+        </td>
       </tr>
     </table>
-    <a href="/addbook">Add Book</a>
+    <a href="/addbook" class="btn btn-success">Add Book</a>
   </body>
 </html>
