--- a/src/main/resources/templates/addbook.html
+++ b/src/main/resources/templates/addbook.html
@@ -20,6 +20,11 @@
 
     <label for="price">Price</label>
     <input type="text" th:field="*{price}" />
+
+    <label for="catlist">Category</label>
+<select id="catlsit" th:field="*{category}" class="form-control"> <option th:each="category: ${categorys}" th:value="${category.categoryId}"
+ th:text="${category.name}"></option>
+</select>
     
     <input type="submit" value="Save"></input>
     </form>
