--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -18,6 +18,7 @@
         <th>ISBN</th>
         <th>Year</th>
         <th>Price</th>
+        <th>Category</th>
       </tr>
       <tr th:each="book : ${books}">
         <td th:text="${book.author}"></td>
@@ -25,6 +26,7 @@
         <td th:text="${book.isbn}"></td>
         <td th:text="${book.publicationYear}"></td>
         <td th:text="${book.price} + ' €'"></td>
+        <td th:text="${book.category.name}"></td>
         <td>
           <a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}"
             >Delete</a
