Added some REST features

--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -40,5 +40,6 @@
       </tr>
     </table>
     <a href="/addbook" class="btn btn-success">Add Book</a>
+    <a href="/allBooks" class="btn btn-primary">Books as JSON</a>
   </body>
 </html>
